# elfontheshelf

./: .gitignore  BUGFIXES.md  MANIFEST.in  README.md  index.html  pyproject.toml  style.css
elf_on_shelf/: audio.py  audio_generator.py  main.py  motion.py  vision.py
elf_on_shelf/behaviors/: __init__.py  scanner.py  sentry.py
tests/: test_audio_direct.py  test_connection.py  validate_audio.py  validate_camera.py  validate_magic.py  validate_scanner.py  validate_with_sim.py  verify.py
