[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elf_on_shelf"
version = "0.1.0"
description = "Elf on the Shelf app for Reachy Mini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe",
    "pyaudio",
    "numpy",
    "opencv-python-headless",
    "reachy-mini[mujoco]>=1.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools]
packages = ["elf_on_shelf"]
